--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@geist-ui/react": "^2.1.3",
     "@primer/octicons-react": "^12.1.0",
+    "arweave": "^1.10.11",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
