--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-feather": "^2.0.9"
+    "react-feather": "^2.0.9",
+    "smartweave": "^0.4.27"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
