--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@geist-ui/react": "^2.1.3",
+    "@kyve/logic": "^0.0.0-alpha.15",
     "@primer/octicons-react": "^12.1.0",
     "arweave": "^1.10.11",
     "next": "^10.0.7",
